more typography updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
             </a></h1>
 
             <h3 class="header_sub_title">Tech blog</h3>
+            <a href="http://jobs.lifesum.com/jobs" class="base_button" target="__BLANK">We are hiring!</a>
           </div>
 
 
